--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <nav class="navbar" role="navigation" aria-label="main navigation">   
                 <div class="mt-3 mb-5 is-flex is-flex-direction-column has-text-centered navlinks">
                     <div>
-                        <h4 class="welcome">Welcome!</h4>
+                        <h4 class="welcome">Lynn's Portfolio</h4>
                     </div>
                     <div class="navbar-brand scrollmenu">
                         <ul class="tabs">
@@ -56,11 +56,6 @@
                                 <span>Project</span>
                             </a>
                           </li>
-                          <li id="employbtn_li">
-                            <a id="employbtn">
-                                <span>Employment Status</span>
-                            </a>
-                          </li>
                         </ul>
                     </div>
                 </div>
@@ -71,38 +66,103 @@
         <div id="introduction" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer">
             <div class="is-fluid is-mobile has-background-white">
                 <div class="m-auto is-mobile is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
-                    <!-- Cute picture of me -->
-                    <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
-                        <div>
-                            <figure class="is-flex image is-128x128">
-                                <img class="is-rounded" src="pics/akshar-dave-1GRvY9WUu08-unsplash.jpg" alt="">  
-                            </figure>
+                    <div>
+                        <!-- Cute picture of me -->
+                        <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
+                            <div style="width: 100%;">
+                                <figure class="image">
+                                    <img src="pics/IMG_6190.JPG" alt="picture of my cat">  
+                                </figure>
+                            </div>
+                            <article class="message">
+                                <div class="message-header" style="background-color: #CA4E79;">
+                                    Hello there~ 👋🏼
+                                </div>
+                                <div class="message-body">
+                                    <p class="is-size-6 paragraph">
+                                        Hi! I am Wan, and I am currently on my last year of university.<br> Currently enrolling in Software Engineering, and going through an internship as a system developer. 
+                                    </p>
+                                </div>
+                            </article>
                         </div>
-                        <p class="is-size-6 paragraph">
-                            Hi! I am Wan, and I am currently on my last year of university.<br> Currently enrolling in Software Engineering, and going through an internship as a system developer. 
-                        </p>
+                        <div class="is-flex is-flex-direction-column">
+
+                            <article class="message is-link">
+                                <div class="message-body">
+                                    <p class="is-size-6 paragraph">
+                                        <i>"Whose cat is this"</i> <br><br>It's my cat, Jon! I'm not comfortable putting my picture here, however if you are curious, you may visit my instagram.
+                                        Which is linked in the footer below!
+                                    </p>
+                                </div>
+                            </article>
+                        </div>
+                        <div name="skillset" class="p-4 mt-5 mb-5">
+                            <article class="is-size-6 paragraph">
+                                <h6 class="is-size-6">✨ Technologies that I have dwelve into ✨</h6>
+                                <div class="is-size-4">
+                                    <span class="tag is-size-6 is-info is-light">C/C++</span>
+                                    <span class="tag is-size-6 is-info is-light">PHP</span>
+                                    <span class="tag is-size-6 is-info is-light">HTML/CSS</span>
+                                    <span class="tag is-size-6 is-info is-light">MySQL</span>
+                                    <span class="tag is-size-6 is-info is-light">PostgreSQL</span>
+                                    <span class="tag is-size-6 is-info is-light">jquery</span>
+                                    <span class="tag is-size-6 is-info is-light">AJAX</span>
+                                    <span class="tag is-size-6 is-info is-light">Java</span>
+                                    <span class="tag is-size-6 is-info is-light">Python</span>
+                                </div>
+
+                            </article>
+                            <article class="mt-4 is-size-6 paragraph">
+                                <h6 class="is-size-6">📖 Stuff that I am learning 📖</h6>
+                                <div class="is-size-4">
+                                    <span class="tag is-size-6 is-warning is-light">Convert website -> mobile friendly</span>
+                                    <span class="tag is-size-6 is-warning is-light">Svelte</span>
+                                    <span class="tag is-size-6 is-warning is-light">React</span>
+                                </div>
+
+                            </article>
+                        </div>
                     </div>
-                    <!-- Some cute intro of me -->
-                    <div name="description" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center mt-5 mb-5">
-                        <p class="is-size-6 paragraph">
-                            My <strong>skillset</strong> is equally balanced between <strong>front-end</strong> and <strong>back-end</strong> development. Throughout university, I often voluntered and participated in coding back-end related modules in most group projects. 
-                            I love discussing and completing a task together with my friends. It is soo much fun! 
-                        </p>
-                        <div>
-                            <figure class="is-flex image is-128x128">
-                                <img src="https://img.icons8.com/doodle/96/000000/learning.png"/>
-                            </figure>
+                    <div>
+                        <h4 class="mt-5 title is-4 has-text-centered">More about me 🙆🏻‍♀️</h4>
+                        <div class="box is-flex is-flex-direction-column is-justify-content-space-evenly">
+                            <div class="p-4 is-mobile is-size-6 paragraph">
+                                <div class="is-centered">
+                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
+                                        <figure class="mt-5 mb-2">
+                                            <img src="pics/icons8-location-64.png" alt="A png image of a location icon">
+                                        </figure>
+                                        <article>
+                                            Currently residing in Melaka, <br>and prefer to work in Melaka for the first few years of my career.
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="is-mobile is-size-6 paragraph">
+                                <div class="has-text-centered">
+                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
+                                        <figure class="mt-5 mb-2">
+                                            <img src="pics/icons8-car-100.png" alt="icon of a car">
+                                        </figure>
+                                        <article>
+                                            Does not have a driving license.
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="is-mobile is-size-6 paragraph">
+                                <div class="has-text-centered">
+                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
+                                        <figure class="mt-5 mb-2">
+                                            <img src="pics/icons8-coding-100.png" alt="icon of a desktop with HTML illustration">
+                                        </figure>
+                                        <article>
+                                           Remote or on-site work? Both is okay!
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div name="description" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
-                        <div>
-                            <figure class="is-flex image is-128x128">
-                                <img src="https://img.icons8.com/doodle/96/000000/man-with-flower.png"/>
-                            </figure>
-                        </div>
-                        <p class="is-size-6 paragraph">
-                            Currently, I am developing a system for a section under a department; full-stack and alone. I am actively searching and reading dev-related forums and articles to ensure I follow best practices as much as I possibly can during development.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -114,7 +174,6 @@
                 <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <div>
                         <div name="education">
-                            <h3 class="title is-2 has-text-centered">EDUCATION</h3>
                             <!-- UMS (Degree) -->
                             <div class="box">
                                 <article class="media">
@@ -180,7 +239,6 @@
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
-                        <h3 class="title is-3 has-text-centered">PROJECTS</h3>
                         <!-- Intern project -->
                         <div class="is-flex is-flex-direction-column">
                             <h4 class="mt-5 title is-4 has-text-centered">Internship Projects</h4>
@@ -364,7 +422,6 @@
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
-                        <h3 class="title is-3 has-text-centered">CAREER</h3>
                         <div class="m-auto column is-half">
                             <div class="box">
                                 <article class="media">
@@ -401,55 +458,6 @@
             </div>
         </div>
 
-        <!-- Employment status -->
-        <div id="employment" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
-            <div class="is-fluid is-mobile has-background-white">
-                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
-                    <div>
-                        <h4 class="title is-3 has-text-centered">EMPLOYMENT STATUS</h4>
-                        <div class="is-flex is-flex-direction-row is-justify-content-space-evenly">
-                            <div class="box is-mobile is-size-6 paragraph">
-                                <div class="is-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure>
-                                            <img src="pics/icons8-location-64.png" alt="A png image of a location icon">
-                                        </figure>
-                                        <article>
-                                            Currently residing in Melaka, <br>and prefer to work in Melaka for the first few years of my career.
-                                        </article>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box is-mobile is-size-6 paragraph">
-                                <div class="is-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure>
-                                            <img src="pics/icons8-car-100.png" alt="icon of a car">
-                                        </figure>
-                                        <article>
-                                            Does not have a driving license.
-                                        </article>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box is-mobile is-size-6 paragraph">
-                                <div class="is-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure>
-                                            <img src="pics/icons8-coding-100.png" alt="icon of a desktop with HTML illustration">
-                                        </figure>
-                                        <article>
-                                           Remote or on-site work? Both is okay!
-                                        </article>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Modals to view more info about projects -->
         <div id="modal-portoflio" class="modal">
             <div class="modal-background"></div>
@@ -464,16 +472,27 @@
     </body>
     <footer class="footer is-flex is-justify-content-center">
         <div class="content has-text-centered">
-            <p>
+            <p class="is-size-6">
                 <strong>Lynn's portfolio</strong> by Wan Norazlin.</a><br>If you would like to contact me,
                 you can send an email to wwannorazlin@gmail.com or reach out to me thorugh these social media handles:
-                <div class="has-text-centered is-flex is-flex-content-center">
+                <div class="has-text-centered is-flex is-justify-content-center">
                     <a target="_blank" href="https://www.linkedin.com/in/wan-norazlin-abdullah-7b6210205/">
                         <figure class="image is-32x32">
-                            <img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png"/>  
+                            <img src="https://img.icons8.com/ios-filled/50/F25081/linkedin-circled--v1.png" alt="pink linkedin icon"/>  
                         </figure>
                     </a>
+                    <a target="_blank" href="https://www.instagram.com/jimie_s/">
+                        <figure class="image is-32x32">
+                            <img src="https://img.icons8.com/ios-filled/50/F25081/instagram-new--v1.png" alt="pink instagram icon"/>
+                        </figure>
+                    </a>
+                    <a target="_blank" href="https://github.com/Jimie1307">
+                        <figure class="image is-32x32">
+                            <img src="https://img.icons8.com/ios-filled/50/F25081/github.png" alt="pink github icon"/>
+                        </figure> 
+                    </a>
                 </div>
+
             </p>
         </div>
     </footer>
