--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
         <!-- Education -->
         <div id="edu" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
-                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
-                    <div>
+                <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
+                    <div class="is-flex is-mobile is-fluid is-flex-direction-column is-align-items-center">
                         <div name="education">
                             <!-- UMS (Degree) -->
-                            <div class="box">
+                            <div class="box mt-5">
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
@@ -193,7 +193,7 @@
                                 </article>
                             </div>
                             <!-- UMS (Foundation) -->
-                            <div class="box">
+                            <div class="box mt-5">
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
@@ -211,7 +211,7 @@
                                 </article>
                             </div>
                             <!-- SAMURA -->
-                            <div class="box">
+                            <div class="box mt-5 mb-5">
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
@@ -237,7 +237,7 @@
         <!-- Project -->
         <div id="projects" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
-                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
+                <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <!-- Intern project -->
                         <div class="is-flex is-flex-direction-column">
@@ -422,7 +422,7 @@
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
-                        <div class="m-auto column is-half">
+                        <div class="is-flex is-mobile is-fluid is-flex-direction-column">
                             <div class="box">
                                 <article class="media">
                                     <div class="media-left">
