--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <!-- Cute picture of me -->
                         <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
                             <div style="width: 100%;">
-                                <figure class="image">
+                                <figure class="image is-mobile">
                                     <img src="pics/IMG_6190.JPG" alt="picture of my cat">  
                                 </figure>
                             </div>
@@ -97,7 +97,7 @@
                             </article>
                         </div>
                         <div name="skillset" class="p-4 mt-5 mb-5">
-                            <article class="is-size-6 paragraph">
+                            <article class="is-size-6 is-mobile paragraph">
                                 <h6 class="is-size-6">✨ Technologies that I have dwelve into ✨</h6>
                                 <div class="is-size-4">
                                     <span class="tag is-size-6 is-info is-light">C/C++</span>
@@ -112,10 +112,10 @@
                                 </div>
 
                             </article>
-                            <article class="mt-4 is-size-6 paragraph">
+                            <article class="mt-4 is-size-6 is-mobile aragraph">
                                 <h6 class="is-size-6">📖 Stuff that I am learning 📖</h6>
                                 <div class="is-size-4">
-                                    <span class="tag is-size-6 is-warning is-light">Convert website -> mobile friendly</span>
+                                    <span class="tag is-size-6 is-warning is-light">Mobile friendly websites</span>
                                     <span class="tag is-size-6 is-warning is-light">Svelte</span>
                                     <span class="tag is-size-6 is-warning is-light">React</span>
                                 </div>
@@ -129,7 +129,7 @@
                             <div class="p-4 is-mobile is-size-6 paragraph">
                                 <div class="is-centered">
                                     <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="mt-5 mb-2">
+                                        <figure class="image is-mobile mt-5 mb-2">
                                             <img src="pics/icons8-location-64.png" alt="A png image of a location icon">
                                         </figure>
                                         <article>
@@ -141,7 +141,7 @@
                             <div class="is-mobile is-size-6 paragraph">
                                 <div class="has-text-centered">
                                     <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="mt-5 mb-2">
+                                        <figure class="image is-mobile mt-5 mb-2">
                                             <img src="pics/icons8-car-100.png" alt="icon of a car">
                                         </figure>
                                         <article>
@@ -153,7 +153,7 @@
                             <div class="is-mobile is-size-6 paragraph">
                                 <div class="has-text-centered">
                                     <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="mt-5 mb-2">
+                                        <figure class="image is-mobile mt-5 mb-2">
                                             <img src="pics/icons8-coding-100.png" alt="icon of a desktop with HTML illustration">
                                         </figure>
                                         <article>
