--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <img src="pics/IMG_6190.JPG" alt="picture of my cat">  
                                 </figure>
                             </div>
-                            <article class="message">
+                            <article class="message is-mobile is-fluid">
                                 <div class="message-header" style="background-color: #CA4E79;">
                                     Hello there~ 👋🏼
                                 </div>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="is-flex is-flex-direction-column">
 
-                            <article class="message is-link">
+                            <article class="message is-mobile is-fluid is-link">
                                 <div class="message-body">
                                     <p class="is-size-6 paragraph">
                                         <i>"Whose cat is this"</i> <br><br>It's my cat, Jon! I'm not comfortable putting my picture here, however if you are curious, you may visit my instagram.
@@ -112,7 +112,7 @@
                                 </div>
 
                             </article>
-                            <article class="mt-4 is-size-6 is-mobile aragraph">
+                            <article class="mt-4 is-size-6 is-mobile paragraph">
                                 <h6 class="is-size-6">📖 Stuff that I am learning 📖</h6>
                                 <div class="is-size-4">
                                     <span class="tag is-size-6 is-warning is-light">Mobile friendly websites</span>
@@ -128,8 +128,8 @@
                         <div class="box is-flex is-flex-direction-column is-justify-content-space-evenly">
                             <div class="p-4 is-mobile is-size-6 paragraph">
                                 <div class="is-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="image is-mobile mt-5 mb-2">
+                                    <div class="is-flex is-mobile is-fluid has-text-centered is-flex-direction-column is-justify-content-center is-align-items-center">
+                                        <figure class="image is-64x64">
                                             <img src="pics/icons8-location-64.png" alt="A png image of a location icon">
                                         </figure>
                                         <article>
@@ -140,8 +140,8 @@
                             </div>
                             <div class="is-mobile is-size-6 paragraph">
                                 <div class="has-text-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="image is-mobile mt-5 mb-2">
+                                    <div class="is-flex is-mobile is-fluid has-text-centered is-flex-direction-column is-justify-content-center is-align-items-center">
+                                        <figure class="image is-64x64 is-mobile mt-5 mb-2">
                                             <img src="pics/icons8-car-100.png" alt="icon of a car">
                                         </figure>
                                         <article>
@@ -152,8 +152,8 @@
                             </div>
                             <div class="is-mobile is-size-6 paragraph">
                                 <div class="has-text-centered">
-                                    <div class="is-flex has-text-centered is-flex-direction-column is-justify-content-center is-align-content-center">
-                                        <figure class="image is-mobile mt-5 mb-2">
+                                    <div class="is-flex is-mobile is-fluid has-text-centered is-flex-direction-column is-justify-content-center is-align-items-center">
+                                        <figure class="image is-64x64 is-mobile mt-5 mb-2">
                                             <img src="pics/icons8-coding-100.png" alt="icon of a desktop with HTML illustration">
                                         </figure>
                                         <article>
