--- a/index.html
+++ b/index.html
@@ -423,14 +423,9 @@
                 <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <div class="is-flex is-mobile is-fluid is-flex-direction-column">
-                            <div class="box">
-                                <article class="media">
-                                    <div class="media-left">
-                                        <figure class="mt-2 image is-128x128" name="logo/brand/icon">
-                                            <img src="pics/ums.jpg" alt="UMS logo">
-                                        </figure>
-                                    </div>
-                                    <div class="media">
+                            <div>
+                                <article class="media is-flex is-justify-content-center">
+                                    <div class="box p-5">
                                         <div class="container content is-size-6 is-justify-content-center paragraph">
                                             <h5>Practical Trainee (System Development)</h5>
                                             <strong>Honda Malaysia Sdn Bhd</strong>
@@ -442,7 +437,7 @@
                                                     <li>Built a full-stack web application that assists the Quality sections' Engineer to monitor
                                                         the progress of issued parts.
                                                     </li>
-                                                    <li>Assisted in supporting roles under the Admin Technician. Mostly tasks ranging from reports (using Microsoft Excel) to 
+                                                    <li>Assisted in supporting roles under the Admin Technician. Tasks ranging from reports (using Microsoft Excel) to 
                                                         minor office tasks (printing, lamination, etc).
                                                     </li>
                                                 </ul>
