--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         
         <!-- Introduction -->
         <div id="introduction" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer">
-            <div class="is-fluid is-mobile has-background-white">
-                <div class="m-auto is-mobile is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
+            <div class="is-fluid is-mobile has-background-white is-flex is-justify-content-center">
+                <div class="is-mobile is-flex is-flex-direction-column is-justify-content-center p-5 mt-5 mb-5 content">
                     <div>
                         <!-- Cute picture of me -->
-                        <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
+                        <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center mt-5 mb-5">
                             <div style="width: 100%;">
                                 <figure class="image is-mobile">
                                     <img src="pics/IMG_6190.JPG" alt="picture of my cat">  
