--- a/index.html
+++ b/index.html
@@ -68,25 +68,22 @@
                 <div class="is-mobile is-flex is-flex-direction-column is-justify-content-center p-5 mt-5 mb-5 content">
                     <div>
                         <!-- Cute picture of me -->
-                        <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center mt-5 mb-5">
-                            <div style="width: 100%;">
-                                <figure class="image is-mobile">
-                                    <img src="pics/IMG_6190.JPG" alt="picture of my cat">  
-                                </figure>
-                            </div>
+                        <div class="is-flex is-flex-direction-row is-align-items-center is-align-content-center mt-5 mb-5">
                             <article class="message is-mobile is-fluid">
-                                <div class="message-header" style="background-color: #CA4E79;">
+                                <div class="is-size-4 message-header" style="background-color: #CA4E79;">
                                     Hello there~ 👋🏼
                                 </div>
                                 <div class="message-body">
+                                    <figure class="image">
+                                        <img src="pics/IMG_6190.JPG" alt="my cat, jon">
+                                    </figure>
                                     <p class="is-size-6 paragraph">
-                                        Hi! I am Wan, and I am currently on my last year of university.<br> Currently enrolling in Software Engineering, and going through an internship as a system developer. 
+                                        Hi! I am Wan, and I am currently on my last year of university. Currently enrolling in Software Engineering, and going through an internship as a system developer. 
                                     </p>
                                 </div>
                             </article>
                         </div>
                         <div class="is-flex is-flex-direction-column">
-
                             <article class="message is-mobile is-fluid is-link">
                                 <div class="message-body">
                                     <p class="is-size-6 paragraph">
@@ -242,7 +239,7 @@
                         <!-- Intern project -->
                         <div class="is-flex is-flex-direction-column">
                             <h4 class="mt-5 title is-4 has-text-centered">Internship Projects</h4>
-                            <div class="m-auto column is-half">
+                            <div class="is-flex is-justify-content-center">
                                 <div class="box">
                                     <h5 class="title is-5 has-text-centered">Poop poop</h5>
                                     <article>
@@ -269,9 +266,9 @@
                         </div>
                         <hr>
                         <!-- University Project -->
-                        <div class="is-flex is-flex-direction-column">
+                        <div class="is-flex is-flex-direction-column is-align-items-center">
                             <h4 class="mt-5 title is-4 has-text-centered">University Projects</h4>
-                            <div class="m-auto column is-half">
+                            <div class="column is-half is-flex is-flex-direction-column">
                                 <!-- FYP Project -->
                                 <div class="box">
                                     <h5 class="title is-5 has-text-centered">Final Year Project: Securing Documents with Lightweight Encryption Algorithm</h5>
