trying to make pic responsive

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     Hello there~ 👋🏼
                                 </div>
                                 <div class="message-body">
-                                    <figure class="image">
+                                    <figure class="image" style="width: auto; max-width: 100%; height: auto;">
                                         <img src="pics/IMG_6190.JPG" alt="my cat, jon">
                                     </figure>
                                     <p class="is-size-6 paragraph">
