changes are made
changes that does not matter much

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                                     Hello there~ 👋🏼
                                 </div>
                                 <div class="message-body">
-                                    <figure class="image" style="width: auto; max-width: 100%; height: auto;">
-                                        <img src="pics/IMG_6190.JPG" alt="my cat, jon">
+                                    <figure class="image is-flex is-justify-content-center is-align-items-center" style="width: auto; max-width: 100%; height: auto;">
+                                        <img src="pics/IMG_6190.JPG" alt="my cat, jon"/>
                                     </figure>
                                     <p class="is-size-6 paragraph">
                                         Hi! I am Wan, and I am currently on my last year of university. Currently enrolling in Software Engineering, and going through an internship as a system developer. 
